fix double scrollbar

--- a/src/Creatures/Creatures.module.scss
+++ b/src/Creatures/Creatures.module.scss
@@ -1,8 +1,8 @@
 .container {
   display: grid;
   grid-template-rows: min-content 1fr;
-  height: 100vh;
   overflow-y: scroll;
+  scrollbar-width: thin;
   
   & hr {
     border: 0;
